--- a/浮层开关/style.css
+++ b/浮层开关/style.css
@@ -1,5 +1,8 @@
 body{
     border: 1px solid red;
+    width: 500px;
+    margin: auto;
+    margin-top: 100px;
 }
 .wrapper{
     position: relative;
