--- a/resume/resume05/style.css
+++ b/resume/resume05/style.css
@@ -322,11 +322,16 @@ section.skills.offset .progress{
     transform: translateY(0); 
     transition: 1s all;
 }
+.portfolio{
+    margin-bottom: 200px;
+    width: 720px;
+}
 .portfolio > h2{
     text-align: center;
     font-size: 34px;
     line-height: 1.2px;
     font-weight: 600px;
+    margin-bottom: 64px; 
 }
 .portfolio >nav{
     display: inline-block;
